tests/rules/samples/ok_enum.c
typedef enum e_toto
{
	TOTO = 0,
	TUTU,
	TITI,
}	t_toto;
